# api.consumet.org

./: Cargo.toml  Dockerfile  README.md
docs/: README.md
src/: main.rs
src/models/: types.rs
src/routes/movies/: flixhq.rs
src/utils/: lib.rs  logger.rs  mod.rs
