[package]
name = "api-consumet-org"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.19", features = ["macros"] }
consumet-rs = "0.0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
tracing-subscriber = { version = "0.3.17" }
dotenv = "0.15.0"
tower = "0.4.13"
tracing = "0.1.37"
log = "0.4.19"
log4rs = "1.2.0"
yansi = "0.5.1"
